# divergence

./: Cargo.toml  README.md  build.rs
src/: lib.rs
src/core/: event.rs  game.rs  mod.rs
src/graphics/: colour.rs  mod.rs
src/graphics/renderer/: mod.rs  vertex.rs  window.rs
src/input/: controller.rs  joy.rs  keyboard.rs  mod.rs  mouse.rs
src/maths/: mod.rs
src/maths/complex/: complex.rs  mod.rs  quaternion.rs
src/maths/matrix/: matrix2x2.rs  matrix3x3.rs  matrix4x4.rs  mod.rs
src/maths/vector/: mod.rs  vector2d.rs  vector3d.rs  vector4d.rs
