[package]
name = "divergence"
version = "0.1.0"
authors = ["Hampus Avekvist <seffraavekvist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.29.1"
#gfx = "0.18.2"
#glutin = "0.26.0"
#gfx_window_glutin = "0.31.0"
