[package]
name = "divergence"
version = "0.1.0"
authors = ["Hampus Avekvist <seffraavekvist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.29.1"

[target.'cfg(windows)'.dependencies]
rodio = "0.13.1"
